2008-08-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 549236 – missing Since 2.14 in gtk_file_chooser_get_file
	
	* gtk/gtkmountoperation.c:
        * gtk/gtkfontsel.c:
        * gtk/gtkfilechooser.c: Fix the docs, missing Since 2.14.

2008-08-21  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtksettings.c: When reconstructing the color hash, try
	harder to avoid unnecessary notification, since this can lead
	to infinite reloading of rc files in some situations.

2008-08-21  Cody Russell  <bratsche@gnome.org>

	* gdk/win32/gdkevents-win32.c (doesnt_want_key): Remove the checks
	to see if the window is modally blocked.  This doesn't get us anything,
	and it confuses the search window in GtkTreeView (and potentially other
	utility windows in other apps).  (#520165)

2008-08-21  Michael Natterer  <mitch@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_realize): small formatting fix.

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	Bug 545875 – evo crashed when trying to print pages 6-7 of a 1 page
	email

	* gtk/gtkprintoperation.c: Clamp page ranges to correct ranges

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	* ChangeLog: changelog update for previous commit

2008-08-21  Marek Kasik  <mkasik@redhat.com>

	Bug 535158 – can't rearrange the order of multi pages per side

	* gtk/gtkprinter.c
	* gtk/gtkprinter.h
	* gtk/gtkprintunixdialog.c
	* gtk/gtkprintsettings.c
	* gtk/gtkprintsettings.h
	* gtk/gtkenums.h
	* modules/printbackends/cups/gtkprintbackendcups.c: Allow user to
	specify layout of pages per sheet in number-up mode

Wed Aug 20 18:16:29 2008  Søren Sandmann  <sandmann@redhat.com>

	* gdk/x11/gdkscreen-x11.c (_gdk_x11_screen_size_changed): Emit the
	monitors changed signal when the screen size changes.

2008-08-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Bug 548346 – gtk_color_selection_dialog_get_color_selection always
	returns NULL

	* gtk/gtkcolorseldialog.c
	(gtk_color_selection_dialog_get_color_selection): Use the correct