@@ -1,3 +1,8 @@
+2008-08-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* modules/printbackends/cups/gtkprintbackendcups.c: Add translator
+	hints to many strings.
+
 2008-08-25  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	Bug 549236 – missing Since 2.14 in gtk_file_chooser_get_file
